[package]
name = "engine_proxy"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
description = "A simple proxy server for Gigamono"
readme = "README.md"
repository = "https://github.com/gigamono/engine_proxy"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/engine_proxy"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
hyper-reverse-proxy = "0.4.0"
unicase = "2.5.0"
lazy_static = "1.4.0"

[lib]
name = "engine_proxy"
path = "lib/lib.rs"

[[bin]]
name = "server"
path = "bin/proxy_server.rs"
